# opp-labs

./: README.md
lab1/: CMakeLists.txt  load.cpp  main.cpp  operations.cpp  sec_met.hpp  visualize.py
